# Galley

./: .env.example  .gitignore  Dockerfile  FOLLOW_UPS.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
domain/: README.md
domain/entities/: __init__.py  problem.py  reentry.py  session.py  submission.py  values.py
domain/ports/: __init__.py  clock.py  judge.py  live_broadcaster.py  repositories.py  scheduler.py
domain/usecases/: __init__.py  admit_candidate.py  auto_submit.py  import_problem.py  record_verdict.py  reentry.py  submit_code.py
ops/: README.md
ops/backup/: pg_dump.sh
ops/nginx/: nginx.conf
tests/soak/: run_5x60_with_chaos.py
tests/unit/: test_admit_candidate.py  test_auto_submit.py  test_domain_purity.py  test_entities.py  test_import_problem.py  test_judge0_mapping.py  test_reentry_rate_limit.py  test_seed_problems_valid.py  test_submit_and_record_verdict.py
web/: manage.py
web/apps/candidate/: anticheat.py  apps.py  clock.py  consumers.py  cookies.py  models.py  repos.py  routing.py  urls.py  views.py
web/apps/core/: apps.py  healthz.py  urls.py
web/apps/interviewer/: admin.py  apps.py  broadcaster.py  models.py  repos.py  urls.py  views.py
web/apps/judging/: adapters.py  apps.py  callback.py  models.py  repos.py  snapshot.py  submission_sink.py  submit_view.py  urls.py  views.py
web/apps/scheduling/: adapters.py  apps.py
web/galley/: asgi.py  settings.py  urls.py
web/interview_judge/: asgi.py  settings.py  urls.py
web/static/css/: app.css
web/templates/: base.html
(+40 files in other folders)
